# SmartCalc_v2.0

./: README.md
build-src-Qt_6_5_0_for_macOS_qt_qt6-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-src-Qt_6_5_0_for_macOS_qt_qt6-Debug/.cmake/api/v1/reply/: cache-v2-60ef7e1812de5261bbe8.json  cmakeFiles-v1-ad217032ccf02b0ec412.json  codemodel-v2-573acfd1498014ea53de.json  directory-.-Debug-7c6861f903681392285c.json  index-2024-04-16T15-27-13-0642.json  target-qcustomplot-Debug-f256722938a321aca065.json  target-qcustomplot_autogen_timestamp_deps-Debug-3fc1c7546882d98486ec.json  target-s21_calc-Debug-b35b3558a9f978109f2d.json  target-s21_calc_autogen-Debug-82599783dc89e2baaf29.json  target-s21_calc_lib_contr-Debug-9aa51e532e9bf035c698.json  target-s21_calc_lib_view-Debug-77445d8d3b46ea153dc6.json  target-s21_calc_lib_view_autogen-Debug-c3764680928ef156db9a.json
build-src-Qt_6_5_0_for_macOS_qt_qt6-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-b5510c4a9c50abf92c1a.json  codemodel-v2-88e6f7555b670eec1dc4.json  index-2024-04-16T15-26-23-0377.json  target-qcustomplot_autogen-Debug-5d313f0b5a1f3ee1ae9d.json  target-s21_calc-Debug-d1b8d21a78022d5ff206.json  target-s21_calc_autogen_timestamp_deps-Debug-4353a0313398d1e90164.json  target-s21_calc_lib_back-Debug-b05b99cb520fc7753894.json  target-s21_calc_lib_contr_autogen-Debug-c35a0498e53b8986f002.json  target-s21_calc_lib_contr_autogen_timestamp_deps-Debug-109a65b9eeb5926888c6.json  target-s21_calc_lib_view-Debug-c45140059c65818694ab.json  target-s21_calc_lib_view_autogen_timestamp_deps-Debug-56e23700f0cfeddf59e3.json
build-src-Qt_6_5_0_for_macOS_qt_qt6-Debug/.qt/: QtDeploySupport.cmake
build-src-Qt_6_5_0_for_macOS_qt_qt6-Debug/.qtc_clangd/: compile_commands.json
build-src-Qt_6_5_0_for_macOS_qt_qt6-Debug/.qtc_clangd/.cache/clangd/index/: OpenGLAvailability.h.0BAEB395288CCDE8.idx  QAction.A0E9B07832914D44.idx  QActionGroup.914C4F9B3B98EEB7.idx  QApplication.5DE6D64E3588AD0F.idx  QCache.589C0BFC5DB5817B.idx  QCommonStyle.CD713AD3D90B318A.idx  QDateTime.5E5526BA15F42DEC.idx  QDateTime.940E06698B353DE3.idx  QDeadlineTimer.31998CDF640838BD.idx  QDebug.BC93FF8D535AEDA3.idx  QDialog.9B749A2608B7BC91.idx  QElapsedTimer.3156A6EB21F8CA8C.idx  QEvent.586E0D886DE410C2.idx  QFileSystemModel.98ED1BD737820D7B.idx  QFlags.B91F872DB6EB9F95.idx  QHBoxLayout.7AB20210A97B3492.idx  QHash.8A6AB8402347F6CA.idx  QLayout.7E14108D7833C194.idx  QList.F99CCB48D5563631.idx  QLocale.6B51D915D03B6231.idx  QMainWindow.2149119594683F55.idx  QMap.809322F56D57F07B.idx  QMargins.B91C15622FF98B43.idx  QMatrix4x4.D2555514BA518435.idx  QMessageBox.AA4E9AA9C02006CC.idx  QMetaType.826B110820A19925.idx  QMouseEvent.9FB12B50B01D70BD.idx  QMultiMap.0C38F73E747C6369.idx  QMutex.4FCCF7462E731246.idx  QObject.221C9A8A551D31C1.idx  QPaintDevice.D8773D004F478D57.idx  QPaintDeviceWindow.4EAD9152975C3263.idx  QPaintEvent.BC7BBFA4F2CE01CC.idx  QPainter.2622B2AA0DF9F112.idx  QPainterPath.7B58B92B4EC7A4E0.idx  QPair.BB7D4DC124174340.idx  QPixmap.01670396C8D7F741.idx  QPointF.A67588F004DCC45F.idx  QPointer.1963D549203D339D.idx  QRect.52C221DACB1CD007.idx  (+706 more)
build-src-Qt_6_5_0_for_macOS_qt_qt6-Debug/QCustomPlot-library/: cmake_install.cmake
build-src-Qt_6_5_0_for_macOS_qt_qt6-Debug/QCustomPlot-library/lib/: cmake_install.cmake
build-src-Qt_6_5_0_for_macOS_qt_qt6-Debug/s21_calc.app/Contents/: Info.plist
src/: CMakeLists.txt  Doxyfile  Makefile  main.cpp
src/QCustomPlot-library/lib/: qcustomplot.h
src/controller/: s21_calc_controller.h
src/model/: s21_calc_model.cpp  s21_calc_model.h
src/test/: CMakeLists.txt  test.cpp
src/view/: s21_calc_view.cpp  s21_calc_view.h  s21_calc_view.ui
